# Pacman_Business_Card

./: .gitignore  LICENSE
Documentation/: 2025-01-13 Publishing.md  2025-01-14 CI-CD Part 1.md  Inspiration.md  Learning_Requirements.md  Planning.mw  System Requirements.md
Documentation/Blog/: .01.01.25-Pacman_business_card.md.swp  01.01.25-Pacman_business_card.md  03.01.2025 Nr 2 - How to get started.md  03.01.2025 Nr 3 - Project Organization.md
Documentation/Blog/1/: Nr 1 - Pacman AI Business Card.md  Pacman AI Business Card.md
Documentation/Blog/1 - Start/: A business card that plays Pacman AND has AI?.md  See AI Vs Bots On A Business Card.md  Summary.md
Documentation/Blog/10 - Phase 1 - Execution planning/: Pacman Execution Planning.md
Documentation/Blog/11 - Build Systems/: How I almost overengineered my build system.md  The first draft of the build system.md
Documentation/Blog/11 - Phase 1 - Build Systems/: On overengineering and build-systems.md
Documentation/Blog/2/: How to get started.md  Inspiration for the Project.md  Nr 2 - How to get started.md  Summary.md
Documentation/Blog/2 - But why?/: Blooming from ruins of former projects.md
Documentation/Blog/3/: File Organization.md  Nr 3 - File Organization.md  Project Organization.md
Documentation/Blog/4/: 4 - Requirements.md  How I do the planning by looking at the problem from different angles.md  How to plan a project by looking at a cube.md  How to plan a project by taking different perspectives.md  Inspiration for the Project.md  Ruins of former projects.md
Documentation/Blog/4 - Different perspectives for planning/: 03.01.2025 Prototype to Product.md
Documentation/Blog/5/: 5 - System Architecture.md  How to eat an elephant.md  Planning for an AI Business Card.md  Requirements ooooh Requirements.md
Documentation/Blog/5 - Project Scope Perspectives 1 - Appearance, UC, US, Req/: Planning for an AI Business Card - Appearance, UC, US, Req.md
Documentation/Blog/6/: A light weight build system (part 1 - Hello World).md  Concept.md  How can I eat an elephant? - about System Architecture.md  On the value of support structures - Implementation phases.md  When is it enough?.md
Documentation/Blog/7/: Phase 1 - a host beginning.md
Documentation/Blog/7 - Project Scope Perspectives 3 - Increments/: On the value of support structures - Implementation phases.md
Documentation/Blog/8/: Build Systems.md  How I almost overengineered my build system.md
Documentation/Blog/8 - MS Scope Perspectives 1/: Phase 1 - a host beginning.md
Documentation/Blog/9/: Software Architecture - Pacman Game.md  The first draft of the build system.md
Documentation/Blog/9 - Phase 1 - Software Architecture/: Software Architecture - Pacman Game.md
Documentation/Blog/Drafts/: Architecture.md  Are Requirements really necessary?.md  Coding is like riding a bike.md  How to get started.md  Humans over-admired capabilities to look into the future.md  On exploding jet engines and critical bugs.md  Writing to offload the meat computer and preparing documentation.md
Documentation/Planning/: Stakeholders.md
Documentation/Planning/(Diag) - Diagrams/: Diag - Component System Block Diagram.md  Diag - Index.md  Diag - Model View Control Pacman Game.md  Diag - Pacman AI Game Block Diagram.md
Documentation/Planning/(MS) - Milestones/: MS - Index.md  MS - Pacman Game can be played on the host.md  MS - Phase 0 - Project scope planning.md  MS - Phase 1 - A host beginning.md  MS - Phase 4 - Publicity Baby.md
Documentation/Planning/(PC) - Pseudo Code/: PC - GameRunner.md  PC - Index.md
Documentation/Planning/(Req) - Requirements/: Req - Business Requirements.md  Req - Handling Requirements.md
Documentation/Planning/(TP) - Test Plans/: TP - Battery overcharge and undervoltage.md
Documentation/Planning/(UC) - Use Cases/: UC - A business card handover.md  UC - Blinky LEDs.md  UC - Blogging.md  UC - Business as a talking point.md  UC - Charging Problem.md  UC - Contact info can be passed.md  UC - Final Field Tests.md  UC - Highscore with the help of AI.md  UC - Index.md  UC - Many Cards.md  UC - Marketing Potential of the blog.md  UC - Not only paperweight.md  UC - Project Management exploration.md  UC - Smooth gaming expierience.md  UC - Technical topics worth exploring.md  UC - User charges the device.md  UC - User plays pacman on the card.md
Documentation/Planning/(US) - User Stories/: US - Card raises awareness.md  US - Card remains relevant.md  US - Card shall be pocketable.md  US - Charging the device.md  US - Contact Information display.md  US - Highscore System.md  US - Index.md  US - Learning Project Management.md  US - Learning and growing.md  US - Learning new skills.md  US - Learning to Blog.md  US - Playing Pacman.md  (+5 more)
Documentation/Requirements/: Electrical_Requirements.md  Learning_Requirements.md  Mechanical_Requirements.md  Software_Requirements.md  Stakeholder_Requirements.md  System_Requirements.md
Documentation/Use Case Analysis/: UseCase_Client.md  UseCase_Owner.md  UseCase_Player.md
Hardware/: Component_Research.md
Software/: Software Requirements
Software/Pacman_Game/: CMakeLists.txt
Software/Pacman_Game/app/: app.cpp  hello_world.cpp  pacman_game.cpp
Software/Pacman_Game/lib/: CMakeLists.txt
Software/Pacman_Game/lib/add/: add.cpp  add.h
Software/Pacman_Game/lib/average/: average.cpp  average.h
Software/Pacman_Game/lib/common/: assert.cpp  assert.h
Software/Pacman_Game/lib/data_pool/: data_pool.cpp  data_pool.h
Software/Pacman_Game/lib/environment/: environment.cpp  environment.h
Software/Pacman_Game/lib/game_state/: game_state.cpp  game_state.h
Software/Pacman_Game/lib/pacman_game_logic/: pacman_game_logic.cpp  pacman_game_logic.h
Software/Pacman_Game/lib/ui/: CMakeLists.txt  ui.cpp  ui.h
Software/Pacman_Game/src/App/: MainApp.cpp
Software/Pacman_Game/src/Dummy/: average.cpp  average.h
Software/Pacman_Game/tests/: CMakeLists.txt
Software/Pacman_Game/tests/add_test/: CMakeLists.txt  add_test.cpp
Software/Pacman_Game/tests/average_test/: CMakeLists.txt  average_test.cpp
(+27 files in other folders)
